# NexInsider-AI

./: .env.example  .gitignore  2YEAR_DATA_COLLECTION_OPTIONS.md  ANGEL_ONE_INTEGRATION_COMPLETE.md  API_ONLY_DATA_SOLUTION.md  ASYNC_TEST_FIX_COMPLETE.md  BACKTEST_SUCCESS_PLAN.md  BACKUP_GUIDE.md  COMPLETE_SYSTEM_STATUS.md  CRITICAL_ISSUE_ANALYSIS.md  CURRENT_PERFORMANCE_STATUS.md  CURRENT_STATUS_AND_NEXT_ACTIONS.md  DATA_BACKUP_COMPLETE.md  DATA_COLLECTION_FIX.md  DATA_COLLECTION_GUIDE.md  DATA_COLLECTION_STATUS_APRIL14.md  DATA_COLLECTION_WORKING.md  DATA_DOWNLOAD_REQUIREMENTS.md  DATA_FETCHING_GUIDE.md  DATA_LOADING_CRITICAL_ISSUE.md  DATA_REALITY_CHECK.md  DATA_REQUIREMENTS_1H.md  DATA_SAVING_FIXED.md  DATA_SAVING_ISSUE.md  DATA_SOURCE_DECISION.md  DATA_SOURCE_SOLUTION.md  FINAL_ACTION_PLAN.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_RESULTS_SUMMARY.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINNHUB_API_LIMITATION_EXPLAINED.md  GOOGLE_FINANCE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTRADAY_BACKTEST_RESULTS.csv  INTRADAY_FINAL_STATUS.md  INTRADAY_IMPLEMENTATION_PROGRESS.md  INTRADAY_OPTIMIZATION_PROGRESS.md  INTRADAY_PHASE1_AND_2_COMPLETE.md  INTRADAY_SYSTEM_COMPLETE.md  INTRADAY_TRADING_PLAN.md  (+115 more)
.ml_metadata/: data_splits.json
automation/: paper_trading.py  reports.py  routines.py
backend/: celery_app.py  main.py  scheduler.py
backtest_results/: single_backtest_20260409_121701.csv  strategy_comparison.csv  walk_forward_20260409_121701.csv
backtesting/: __init__.py  broker.py  engine.py  report.py  walk_forward.py
broker/: __init__.py  base.py  router.py  zerodha.py
config/: live_trading_config.yaml
data/: BANKNIFTY_intraday_5m_6months.csv  HDFCBANK_intraday_5m_6months.csv  ICICIBANK_intraday_5m_6months.csv  INFY_intraday_5m_6months.csv  NIFTY50_intraday_5m_6months.csv  RELIANCE_intraday_5m_6months.csv  TCS_intraday_5m_6months.csv  __init__.py  cache.py  config.py  db.py
docs/: model_explainability.md  model_robustness.md
frontend/: package.json  tailwind.config.js
ml/: data_split.py  drift_detection.py  ensemble.py  explainability.py  holdout_validator.py  preprocessing.py  regime_ensemble.py  rl_env.py  training_pipeline.py  validation.py  versioning.py
monitoring/: alerts.py  logging_config.py  metrics.py
risk/: __init__.py  filters.py  manager.py
scripts/: analyze_regimes.py  apply_adjustments.py  backtest_all_strategies.py  backtest_intraday.py  backtest_ml_technical.py  backtest_production_ready.py  backtest_trained_models_fast.py  backtest_with_real_models.py  backtest_with_trained_models.py  backup_database_to_csv.py  benchmark_inference.py  bulk_load_from_csv.py  check_and_restart.sh  check_corporate_actions.py  collect_2years_5min_data.py  collect_2years_angelone.py  collect_2years_smart.py  collect_all_data_sources.py  collect_indian_stock_data.py  comprehensive_backtest.py  export_existing_data_to_csv.py  fetch_1h_data_yfinance.py  fetch_google_finance.py  (+37 more)
(+127 files in other folders)
