[tool.poetry]
name = "algo-trading"
version = "0.1.0"
description = "Production-grade algorithmic trading system for NSE/BSE"
authors = ["Your Name <you@example.com>"]
python = "^3.11"

[tool.poetry.dependencies]
# ── Core ──────────────────────────────────────────────────────────────────────
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
httpx = "^0.27.0"

# ── Data Feeds ────────────────────────────────────────────────────────────────
yfinance = "^0.2.40"
jugaad-data = "^0.27"
nsepy = "^0.8.0"
nsetools = "^1.0.12"
feedparser = "^6.0.11"
playwright = "^1.44.0"

# ── Database ──────────────────────────────────────────────────────────────────
psycopg2-binary = "^2.9.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.4"}

# ── Data Processing ───────────────────────────────────────────────────────────
pandas = "^2.2.2"
numpy = "^1.26.4"
pandas-ta = "^0.3.14b"
scipy = "^1.13.0"

# ── ML / AI ──────────────────────────────────────────────────────────────────
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
torch = "^2.3.0"
pytorch-forecasting = "^1.0.0"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
gymnasium = "^0.29.1"

# ── NLP ──────────────────────────────────────────────────────────────────────
transformers = "^4.40.2"
torch-audio = {version = "*", optional = true}

# ── MLOps ────────────────────────────────────────────────────────────────────
mlflow = "^2.13.0"

# ── Backtesting ───────────────────────────────────────────────────────────────
backtrader = "^1.9.78"

# ── Backend ───────────────────────────────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
apscheduler = "^3.10.4"
websockets = "^12.0"

# ── Broker ────────────────────────────────────────────────────────────────────
kiteconnect = "^5.0.1"
upstox-python-sdk = "^2.8.0"

# ── Alerting ──────────────────────────────────────────────────────────────────
python-telegram-bot = "^21.3"
sendgrid = "^6.11.0"

# ── Monitoring ────────────────────────────────────────────────────────────────
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ipykernel = "^6.29.4"
faker = "^25.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
